--- a/Code/Clean Property Data.ipynb
+++ b/Code/Clean Property Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
        "1382564"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,12 +291,221 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BBLE</th>\n",
+       "      <th>BORO</th>\n",
+       "      <th>BLOCK</th>\n",
+       "      <th>LOT</th>\n",
+       "      <th>BLDGCL</th>\n",
+       "      <th>TAXCLASS</th>\n",
+       "      <th>LTFRONT</th>\n",
+       "      <th>LTDEPTH</th>\n",
+       "      <th>EXT</th>\n",
+       "      <th>STORIES</th>\n",
+       "      <th>...</th>\n",
+       "      <th>VALTYPE</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Community Board</th>\n",
+       "      <th>Council District</th>\n",
+       "      <th>Census Tract</th>\n",
+       "      <th>BIN</th>\n",
+       "      <th>NTA</th>\n",
+       "      <th>New Georeferenced Column</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3514</th>\n",
+       "      <td>1009281654</td>\n",
+       "      <td>1</td>\n",
+       "      <td>928</td>\n",
+       "      <td>1654</td>\n",
+       "      <td>R4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AC-TR</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.736451</td>\n",
+       "      <td>-73.978732</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1086124.0</td>\n",
+       "      <td>Gramercy</td>\n",
+       "      <td>POINT (-73.978732 40.736451)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3519</th>\n",
+       "      <td>1009281661</td>\n",
+       "      <td>1</td>\n",
+       "      <td>928</td>\n",
+       "      <td>1661</td>\n",
+       "      <td>R4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AC-TR</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.736451</td>\n",
+       "      <td>-73.978732</td>\n",
+       "      <td>106.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>64.0</td>\n",
+       "      <td>1086124.0</td>\n",
+       "      <td>Gramercy</td>\n",
+       "      <td>POINT (-73.978732 40.736451)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3544</th>\n",
+       "      <td>1010511417</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1051</td>\n",
+       "      <td>1417</td>\n",
+       "      <td>R4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AC-TR</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.759212</td>\n",
+       "      <td>-73.994510</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>1088437.0</td>\n",
+       "      <td>Clinton</td>\n",
+       "      <td>POINT (-73.99451 40.759212)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7066</th>\n",
+       "      <td>1006371201</td>\n",
+       "      <td>1</td>\n",
+       "      <td>637</td>\n",
+       "      <td>1201</td>\n",
+       "      <td>R8</td>\n",
+       "      <td>2C</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AC-TR</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.735330</td>\n",
+       "      <td>-74.009670</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>1012003.0</td>\n",
+       "      <td>West Village</td>\n",
+       "      <td>POINT (-74.00967 40.73533)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10598</th>\n",
+       "      <td>1002791006</td>\n",
+       "      <td>1</td>\n",
+       "      <td>279</td>\n",
+       "      <td>1006</td>\n",
+       "      <td>R1</td>\n",
+       "      <td>2C</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>AC-TR</td>\n",
+       "      <td>MANHATTAN</td>\n",
+       "      <td>40.712189</td>\n",
+       "      <td>-73.997843</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>1003389.0</td>\n",
+       "      <td>Chinatown</td>\n",
+       "      <td>POINT (-73.997843 40.712189)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 38 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             BBLE  BORO  BLOCK   LOT BLDGCL TAXCLASS  LTFRONT  LTDEPTH  EXT  \\\n",
+       "3514   1009281654     1    928  1654     R4        2        0        0  NaN   \n",
+       "3519   1009281661     1    928  1661     R4        2        0        0  NaN   \n",
+       "3544   1010511417     1   1051  1417     R4        2        0        0  NaN   \n",
+       "7066   1006371201     1    637  1201     R8       2C        0        0  NaN   \n",
+       "10598  1002791006     1    279  1006     R1       2C        0        0  NaN   \n",
+       "\n",
+       "       STORIES  ...  VALTYPE    Borough   Latitude  Longitude  \\\n",
+       "3514      20.0  ...    AC-TR  MANHATTAN  40.736451 -73.978732   \n",
+       "3519      20.0  ...    AC-TR  MANHATTAN  40.736451 -73.978732   \n",
+       "3544       NaN  ...    AC-TR  MANHATTAN  40.759212 -73.994510   \n",
+       "7066      10.0  ...    AC-TR  MANHATTAN  40.735330 -74.009670   \n",
+       "10598      NaN  ...    AC-TR  MANHATTAN  40.712189 -73.997843   \n",
+       "\n",
+       "       Community Board  Council District Census Tract        BIN  \\\n",
+       "3514             106.0               2.0         64.0  1086124.0   \n",
+       "3519             106.0               2.0         64.0  1086124.0   \n",
+       "3544             104.0               3.0        115.0  1088437.0   \n",
+       "7066             102.0               3.0         75.0  1012003.0   \n",
+       "10598            103.0               1.0         27.0  1003389.0   \n",
+       "\n",
+       "                NTA      New Georeferenced Column  \n",
+       "3514       Gramercy  POINT (-73.978732 40.736451)  \n",
+       "3519       Gramercy  POINT (-73.978732 40.736451)  \n",
+       "3544        Clinton   POINT (-73.99451 40.759212)  \n",
+       "7066   West Village    POINT (-74.00967 40.73533)  \n",
+       "10598     Chinatown  POINT (-73.997843 40.712189)  \n",
+       "\n",
+       "[5 rows x 38 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "final_df = clean_value_df[clean_value_df['AVTOT'] != 0]\n",
-    "final_df.to_csv('cleaned_property_data.csv')"
+    "value_df = clean_value_df[clean_value_df['AVTOT'] != 0]\n",
+    "final_df = value_df.drop(['EASEMENT', 'OWNER'], axis= 'columns')\n",
+    "final_df.to_csv('cleaned_property_data.csv')\n",
+    "final_df.head()"
    ]
   }
  ],
